<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <LinearLayout
            android:id="@+id/linearLayoutPoints"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent">

            <TextView
                android:id="@+id/current_selected_point_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:textSize="5pt"
                android:fontFamily="@font/open_sans"
                android:text="@string/no_sensor_selected"
                android:textAlignment="textStart"
                android:textAllCaps="true" />

            <Space
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="2"></Space>

            <TextView
                android:id="@+id/current_selected_point"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="5dp"
                android:textSize="5pt"
                android:fontFamily="@font/open_sans"
                android:text="X: -- Y: --"
                android:textAlignment="textEnd"
                android:textAllCaps="true" />

        </LinearLayout>

        <com.github.mikephil.charting.charts.CombinedChart
            android:id="@+id/scatter_chart"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutPoints">

        </com.github.mikephil.charting.charts.CombinedChart>

        <TableLayout

            android:id="@+id/table_configuration_sensor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            app:layout_constraintTop_toBottomOf="@+id/scatter_chart"
            tools:layout_editor_absoluteX="20dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical"
                    android:text="@string/sensor_configuration"
                    android:textSize="8pt"
                    android:textStyle="bold" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical"
                    android:text="@string/relative_angle" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="4"></Space>

                <EditText
                    android:id="@+id/edit_sensor_relative_angle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_weight="4"
                    android:checked="true"
                    android:inputType="number"
                    android:text="@string/angle"
                    android:textSize="8pt" />

                <Button
                    android:id="@+id/btn_set_angle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Ok" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical"
                    android:text="@string/chart_configuration"
                    android:textSize="8pt"
                    android:textStyle="bold" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical"
                    android:text="@string/view_line_plot" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/switchLine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_weight="1"
                    android:checked="true" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical"
                    android:text="@string/view_scatter_plot" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/switchScatter"
                    android:layout_width="wrap_content"
                    android:layout_height="16pt"
                    android:layout_gravity="left"
                    android:layout_weight="1"
                    android:checked="true" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical"
                    android:text="@string/allow_cubic_interpolation" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/switchCubic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_weight="1"
                    android:checked="true" />
            </TableRow>
        </TableLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>