<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/right_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/open_sans"
            android:text="@string/right"
            android:textAlignment="textEnd"
            android:textAllCaps="true"
            android:textSize="6pt"
            android:textStyle="bold" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"

        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/motor_1_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/open_sans"
                android:text="@string/motor_1_text"
                android:textAlignment="center"
                app:layout_constraintBottom_toTopOf="@+id/sliderMotor2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <com.google.android.material.slider.Slider
                android:id="@+id/sliderMotor1"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:valueFrom="0.0"
                android:valueTo="100.0"
                app:layout_constraintEnd_toStartOf="@id/btn_motor_1"
                app:layout_constraintTop_toTopOf="parent"
                app:thumbRadius="10dp" />

            <Button
                android:id="@+id/btn_motor_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test_motor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/motorSliderText2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/open_sans"
                android:text="@string/motor_2_text"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="@+id/sliderMotor2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sliderMotor1" />


            <com.google.android.material.slider.Slider
                android:id="@+id/sliderMotor2"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:valueFrom="0.0"
                android:valueTo="100.0"
                app:layout_constraintEnd_toStartOf="@id/btn_motor_2"
                app:layout_constraintTop_toBottomOf="@id/sliderMotor1" />


            <Button
                android:id="@+id/btn_motor_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test_motor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_motor_1" />

            <TextView
                android:id="@+id/motorSliderText3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/open_sans"
                android:text="@string/motor_3_text"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sliderMotor2" />


            <com.google.android.material.slider.Slider
                android:id="@+id/sliderMotor3"
                android:layout_width="150dp"
                android:layout_height="36dp"
                android:valueFrom="0.0"
                android:valueTo="100.0"
                app:layout_constraintEnd_toStartOf="@+id/btn_motor_3"
                app:layout_constraintTop_toBottomOf="@id/sliderMotor2" />


            <Button
                android:id="@+id/btn_motor_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test_motor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_motor_2" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <LinearLayout
        android:id="@+id/linearLayout_left"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/open_sans"
            android:text="@string/left"
            android:textAlignment="textEnd"
            android:textAllCaps="true"
            android:textSize="6pt"
            android:textStyle="bold" />

    </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/motor_4_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/open_sans"
                    android:text="@string/motor_4_text"
                    android:textAlignment="center"
                    app:layout_constraintBottom_toTopOf="@+id/sliderMotor5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <com.google.android.material.slider.Slider
                    android:id="@+id/sliderMotor4"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:valueFrom="0.0"
                    android:valueTo="100.0"
                    app:layout_constraintEnd_toStartOf="@id/btn_motor_4"
                    app:layout_constraintTop_toTopOf="parent"
                    app:thumbRadius="10dp" />

                <Button
                    android:id="@+id/btn_motor_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/test_motor"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/motorSliderText5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/open_sans"
                    android:text="@string/motor_5_text"
                    android:textAlignment="center"
                    app:layout_constraintBottom_toBottomOf="@+id/sliderMotor5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/sliderMotor4" />


                <com.google.android.material.slider.Slider
                    android:id="@+id/sliderMotor5"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:valueFrom="0.0"
                    android:valueTo="100.0"
                    app:layout_constraintEnd_toStartOf="@id/btn_motor_5"
                    app:layout_constraintTop_toBottomOf="@id/sliderMotor4" />


                <Button
                    android:id="@+id/btn_motor_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/test_motor"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/btn_motor_4" />

                <TextView
                    android:id="@+id/motorSliderText6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/open_sans"
                    android:text="@string/motor_6_text"
                    android:textAlignment="center"
                    app:layout_constraintBottom_toTopOf="@+id/btn_test_all"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/sliderMotor5" />


                <com.google.android.material.slider.Slider
                    android:id="@+id/sliderMotor6"
                    android:layout_width="150dp"
                    android:layout_height="36dp"
                    android:valueFrom="0.0"
                    android:valueTo="100.0"
                    app:layout_constraintEnd_toStartOf="@+id/btn_motor_6"
                    app:layout_constraintTop_toBottomOf="@id/sliderMotor5" />


                <Button
                    android:id="@+id/btn_motor_6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/test_motor"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/btn_motor_5" />

                <Button
                    android:id="@+id/btn_test_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/test_all"
                    app:layout_constraintEnd_toEndOf="@+id/constraintLayout3"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btn_motor_6" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>